Update MiniSpringContext.java